Fixed flickering partup sub navigation

--- a/app/client/stylesheets/components/pu-partuppagelayout.sass
+++ b/app/client/stylesheets/components/pu-partuppagelayout.sass
@@ -35,6 +35,7 @@
                 left: 0
                 right: 420px
                 z-index: 2
+                transform: translateZ(0) // fixes flickering header on scroll
 
             .pu-sub-partupdetail-content
                 padding-top: $spacing-app-partupnavheight + $spacing-app-partupnavpaddingtop
